--- a/src/main/resources/templates/AcountDetails.html
+++ b/src/main/resources/templates/AcountDetails.html
@@ -9,6 +9,7 @@
 <body>
 
 
+
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm divaccdtl">
@@ -44,9 +45,9 @@
 	<br />
 	<div class="row">
 		<div class="col-sm box6">
-			<a href="/">Search Again</a>
+		
+			<a th:href="@{${url}}">Search Again</a>
 			<h2>DO TRANSACTION</h2>
-
 		</div>
 	</div>
 	<div class="row">
