--- a/src/main/resources/templates/TransactionForm.html
+++ b/src/main/resources/templates/TransactionForm.html
@@ -18,7 +18,7 @@
 	<br />
 	<br />
 	<h3 style="color: red; text-align: center">
-		<a href="/">HOME</a>
+		<a th:href="@{${url}}">HOME</a>
 	</h3>
 </body>
 </html>
